<resources>
    <string name="app_name">Covid Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_19_tracker">Covid-19 Tracker</string>
    <string name="statistics">Statistics</string>
    <string name="deaths">Deaths</string>
    <string name="global">Global</string>
    <string name="india">India</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="active">ACTIVE</string>
    <string name="recovered">RECOVERED</string>
    <string name="deaths_caps">DEATHS</string>
    <string name="deceased">Deceased-</string>
    <string name="_6">6%</string>
    <string name="recovered_1">Recovered-</string>
    <string name="_50">50%</string>
    <string name="active_1">Active-</string>
    <string name="_44">44%</string>
    <string name="countries_affected_by_corona_virus">Countries affected by corona virus</string>
    <string name="global_top_5">Global Top 5</string>
    <string name="country">Country</string>
    <string name="a">A</string>
    <string name="r">R</string>
    <string name="d">D</string>
    <string name="view_all">View all</string>
    <string name="rate_of_growth">Rate of growth</string>
    <string name="view_map">View map</string>
    <string name="states_affected_by_corona_virus">States affected by corona virus</string>
    <string name="all_states_ut">All States/UT</string>
    <string name="states">States</string>
    <string name="countries_data_all">Countries Data (All)</string>
    <string name="district">District</string>
    <string name="state_ut">State/UT</string>
    <string name="view_on_map">View on Map</string>
    <string name="indian_map_stats">Illustrative Map View</string>
    <string name="back_button_iv_cnt">back button</string>
    <string name="state_name">State Name</string>
    <string name="_0">0</string>
    <string name="map_case_format">%d %s cases</string>
    <string name="search_btn">search_btn</string>
    <string name="start_typing">Start typing...</string>
    <string name="no_such_state_found">No such state found</string>
    <string name="search_state_by_name">Search state by name</string>
    <string name="karnataka">Karnataka</string>
    <string name="dismiss_action">dismiss_action</string>
</resources>