<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/sheet_slider"
            android:layout_width="42dp"
            android:layout_height="2dp"
            android:layout_marginTop="12dp"
            android:background="#BDBDBD"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/search_state_by_name"
            android:textColor="#403F3F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sheet_slider" />

        <ImageView
            android:id="@+id/dismiss_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cross"
            android:layout_marginTop="28dp"
            android:layout_marginRight="18dp"
            android:contentDescription="@string/dismiss_action"
            android:layout_marginEnd="18dp" />

        <EditText
            android:id="@+id/et_search_bar"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/search_round"
            android:drawableEnd="@drawable/ic_draw_search"
            android:drawableRight="@drawable/ic_draw_search"
            android:hint="@string/start_typing"
            android:inputType="text"
            android:paddingStart="11dp"
            android:paddingEnd="11dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/recycler_view"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:paddingBottom="?attr/actionBarSize"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search_bar"
            tools:listitem="@layout/state_list_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_data_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_such_state_found"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/search_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progress_bs"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>